Fixed a google link survey on the BUILDS Open House page because it was too long. Changed the panel size on mobile devices. Width was a bit too much.

--- a/public/stylesheets/home.scss
+++ b/public/stylesheets/home.scss
@@ -130,7 +130,8 @@ body {
   }
 
   .panel {
-    margin: -170px 0 0 -200px;
+    width: 350px;
+    margin: -170px 0 0 -175px;
   }
 }
 
